# amrex-tutorials

Docs/source/: HeatEquation_PythonDriver.rst
ExampleCodes/MPMD/Case-0/Source_1/: main_1.cpp
ExampleCodes/MPMD/Case-0/Source_2/: main_2.cpp
GuidedTutorials/HeatEquation/Source/: HeatEquationModel.py
GuidedTutorials/HeatEquation_PythonDriver/: README.md  main.cpp
GuidedTutorials/HeatEquation_PythonDriver/Case-1/: CMakeLists.txt  GNUmakefile  Make.package  bindings.cpp  pybind11.cmake  test.py
GuidedTutorials/HeatEquation_PythonDriver/Case-2/: HeatEquationModel.py  README.md
